| Summary: | ASTERISK-30411: app_read: add option to include terminating digit on empty, terminated strings | ||
| Reporter: | Michael Bradeen (mbradeen) | Labels: | |
| Date Opened: | 2023-01-30 16:46:28.000-0600 | Date Closed: | 2023-02-27 12:14:42.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_read |
| Versions: | 18.16.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | CommUnity UCaaS submission - add the option to return the terminating digit as the read string if only the terminating digit was read. This can allow for more distinction between timeouts and specifically chosen empty-strings. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2023-02-27 12:14:43.075-0600 Change 19906 merged by Friendly Automation: app_read: Add an option to return terminator on empty digits. [https://gerrit.asterisk.org/c/asterisk/+/19906|https://gerrit.asterisk.org/c/asterisk/+/19906] By: Friendly Automation (friendly-automation) 2023-02-27 13:42:40.950-0600 Change 19905 merged by George Joseph: app_read: Add an option to return terminator on empty digits. [https://gerrit.asterisk.org/c/asterisk/+/19905|https://gerrit.asterisk.org/c/asterisk/+/19905] By: Friendly Automation (friendly-automation) 2023-02-27 13:43:00.368-0600 Change 19883 merged by George Joseph: app_read: Add an option to return terminator on empty digits. [https://gerrit.asterisk.org/c/asterisk/+/19883|https://gerrit.asterisk.org/c/asterisk/+/19883] By: Friendly Automation (friendly-automation) 2023-02-27 14:38:36.244-0600 Change 19917 merged by Friendly Automation: app_read: Add an option to return terminator on empty digits. [https://gerrit.asterisk.org/c/asterisk/+/19917|https://gerrit.asterisk.org/c/asterisk/+/19917] | ||